--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -34,39 +34,40 @@ exclude-simple-hostnames = true
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, Aladdin, ESNC, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, Aladdin, ESNC, CTC, ACA, CitrusLab, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
 独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Texon.png
 Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Linkeless.png
 SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/092.png
 JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/JAS.AI.png
 Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/Z021.png
-SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/SYN.png
+SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/SYN.png
 独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Unicorn.png
 To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
 Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/BiliBili.png
-Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 TikTok = select, 通透世界, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/TikTok.png
 OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/ChatGPT5.png
 PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/softlyx/PikPak.png
-Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/instagram(2).png
-X = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/X.png
-守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/GuGu.png
+Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram.png
+X = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/X.png
 SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ntRRR.png, policy-regex-filter=SP
+守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/GuGu.png
 流媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
 Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/143.png
-香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
+台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
+新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
+日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
+美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
+韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
 异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
 Aladdin = select, policy-path=https://sub.store/download/Aladdin, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/AladdinLottery.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
-CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/CTC.png
+CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/095.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
+CitrusLab = select, policy-path=https://sub.store/download/CitrusLab, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/CitrusLab.png
 
 [Rule]
 # > 机场订阅
@@ -128,8 +129,10 @@ RULE-SET,http://bm7/PikPak,PikPak
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 # > SYNEmby
 DOMAIN-SUFFIX,synn.cc,SYNEmby
+# > Baisi 百思
+DOMAIN-SUFFIX,baisi.pro,守候Emby
 # > CC公益Emby
-DOMAIN,cc.coemn.com,通透世界
+DOMAIN,cc.coemn.com,守候Emby
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,守候Emby
 # > Jetbrains
