--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -34,28 +34,28 @@ exclude-simple-hostnames = true
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, Aladdin, ESNC, CTC, ACA, CitrusLab, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, ESNC, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
-独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Texon.png
+独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
 Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Linkeless.png
-SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/092.png
+SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/004.png
 JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/JAS.AI.png
 Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/Z021.png
 SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/SYN.png
-独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Unicorn.png
+独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
 To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
-Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
-Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/BiliBili.png
-Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
-TikTok = select, 通透世界, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/TikTok.png
-OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/chxm1023/ChatGPT5.png
-PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/softlyx/PikPak.png
+Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple1.png
+Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/BiliBili.png
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram.png
+TikTok = select, 通透世界, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok.png
+OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/OpenAI.png
+PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/PikPak.png
 Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
-X = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
+Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
 SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ntRRR.png, policy-regex-filter=SP
 守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/GuGu.png
 流媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
-Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/143.png
+Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/013.png
 香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
 台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
 新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
@@ -66,6 +66,7 @@ Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/fmz20
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
 CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/095.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
+TNet = select, policy-path=https://sub.store/download/TNet, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TsunamiNet.png
 
 [Rule]
 # > 机场订阅
