--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -56,11 +56,11 @@ SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86
 守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/GuGu.png
 流媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
 Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/013.png
-香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
-台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
-新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
-日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
-美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
+香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
+台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
+新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
+日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
+美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
 韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
 异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
