--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -53,8 +53,8 @@ PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩
 Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
 Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
 SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP
-守候Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
-流媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
+Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
+Streaming = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
 Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/013.png
 香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
 台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
@@ -129,19 +129,19 @@ RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 # > SYNEmby
 DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > Baisi 百思
-DOMAIN-SUFFIX,baisi.pro,守候Emby
+DOMAIN-SUFFIX,baisi.pro,Emby
 # > CC公益Emby
-DOMAIN-SUFFIX,coemn.com,守候Emby
-DOMAIN-SUFFIX,carryz.net,守候Emby
+DOMAIN-SUFFIX,coemn.com,Emby
+DOMAIN-SUFFIX,carryz.net,Emby
 # > 守候Emby
-DOMAIN-SUFFIX,cn2gias.uk,守候Emby
+DOMAIN-SUFFIX,cn2gias.uk,Emby
 # > Jetbrains
 RULE-SET,http://bm7/Jetbrains,通透世界
 # > 国内流媒体
 RULE-SET,http://bm7/ChinaMedia,DIRECT
 # > 国外流媒体
-RULE-SET,http://skk/non_ip/stream.conf,流媒体,extended-matching
-RULE-SET,http://skk/ip/stream.conf,流媒体,extended-matching
+RULE-SET,http://skk/non_ip/stream.conf,Streaming,extended-matching
+RULE-SET,http://skk/ip/stream.conf,Streaming,extended-matching
 # > China
 RULE-SET,http://skk/non_ip/domestic.conf,DIRECT
 RULE-SET,http://skk/non_ip/direct.conf,DIRECT
